# H1Conformance

./: CMakeLists.txt  README.md  configuration.hpp  main.cpp  stream_wrapper.hpp  utils.cpp  utils.hpp
connection/: connection.hpp  exception.hpp  insecure_connection.cpp  insecure_connection.hpp
http/: exception.hpp  header.hpp  response.hpp  response_reader.cpp  response_reader.hpp
suites/: suite.hpp  suite_collection.hpp  suite_exception.hpp
suites/basic/: basic_collection.hpp  host_header.cpp  host_header.hpp  invalid_request_line.cpp  invalid_request_line.hpp  minimal_request.cpp  minimal_request.hpp
suites/startline/: method.cpp  method.hpp  request_target.cpp  request_target.hpp  startline_collection.hpp  version.cpp  version.hpp
